hphp/hack/test/typecheck/array/safe_vector_array/disallow_darray_with_wrong_key_type_where_varray_or_darray_is_required_in_non_strict_mode.php.exp
File "disallow_darray_with_wrong_key_type_where_varray_or_darray_is_required_in_non_strict_mode.php", line 3, characters 16-19:
You may not use a reserved keyword for a class name (Parsing[1002])
